package num.game.logics;

public class ConstNumGame {
	public static final int MAXNUM=100;
}
