package ge_Javap2;

import num.game.logics.NumGame2;

public class Main {
	public static void main(String[] args) {
		NumGame2 game ;
		game= new NumGame2();
		game.start();

	}

	
}
